2005-01-23 [hoa]	0.8

	* src/etpan_privacy.c
	        changed API usage to sync with claws.

2004-08-26 [paul]

	* config/		** ADDED **
	* config/Makefile.am	** ADDED **
	* config/.cvsignore	** ADDED **
	* configure.ac
	* Makefile.am
	* src/Makefile.am
		use pkg-config
		fix up autotools magick

2004-08-26 [paul]

	* Makefile.am
	* src/Makefile.am
	  	fix install destination
		add 'make release'

2004-08-22 [hoa]	0.7
	
	* src/prefs_privacy.c
	    Update API calls.

2004-07-19 [colin]	0.6
	
	* src/prefs_privacy.c
	    Update functions name to sync with main.
	    Thanks to Charles A Edwards for the patch.

2003-12-16 [hoa]	0.5

	* ChangeLog
	* README
	* configure.ac
	* src/etpan_privacy.c
	* src/mailprivacy.c
	    return NULL when etPan! privacy system did not
	    decode any part.
	
2003-12-16 [hoa]	0.4

	* README
	* configure.ac
	    updated to libEtPan! 0.32
	
2003-12-15 [hoa]	0.3

	* src/mailprivacy.[ch]
	* src/mailprivacy_gnupg.[ch]
	* src/mailprivacy_smime.[ch]
	* src/mailprivacy_tools.[ch]
	* src/mailprivacy_types.h
	    sync with etpan-ng

2003-12-14 [hoa]	0.2

	sync with 0.9.7claws40

2003-12-10 [hoa]	0.1

	* initial import
	    version includes support for OpenPGP encrypted messages
	    and signed messages, inline PGP signed and encrypted messages,
	    S/MIME encrypted and signed messages.