@@ -1,7 +1,7 @@
 AC_INIT(src/plugin.c)
 AM_MAINTAINER_MODE
 
-PLUGINVERSION=0.8
+PLUGINVERSION=0.9
 AC_DEFINE_UNQUOTED(PLUGINVERSION, "$PLUGINVERSION", [plugin version])
 AM_INIT_AUTOMAKE(etpan-privacy, $PLUGINVERSION, no-define)
 
